5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4001/executions/1756_2390.log
== TEST (2019-05-28 20:07:42) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f - array(eval(input("Faltantes: ")))
i = 0
while(i < size(p)):
	if(p[i] != max(p)):
		i = i + 1
print(max(p) + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:08:02) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
while(i < size(p)):
	if(p[i] != max(p)):
		i = i + 1
print(max(p) + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:08:52) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
while(i < size(p)):
	if(p[i] != max(p)):
		i = i + 1 
print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:09:58) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:10:29) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
	else:
		i = 0
print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:10:54) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
	else:
		i = 0
print(i)
-- EXECUTION TIME:
0.5161
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:10:57) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
	else:
		i = 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:13:46) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
		v = v + 1
	else:
		i = 0
		v = 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:14:47) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
		v = v + 1
	else:
		i = 0
		v = 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:18:04) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
	else:
		i = 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:18:23) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
	else:
		i = 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 20:19:33) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		v = v + 1 
	else:
		v = 0
	i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:27:01) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
		v = v + 1
	else:
		i = 0
		v = 0
print(v)
-- EXECUTION TIME:
745.224
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 20:27:01) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
v = 0
while(i < size(p)):
	if(p[v] != max(p)):
		i = i + 1 
		v = v + 1
	else:
		i = 0
		v = 0
print(i)
-- EXECUTION TIME:
737.274
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:25:20) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0

while(i < size(p)):
	if(p[i] != max(p)):	
	else:
		v = 0
	i = i + 1
print(i)
-- EXECUTION TIME:
0.254468
-- ERROR:
  File "/home/codebench/codes/1756/2390/main.py", line 8
    else:
       ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:27:21) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1

while (p[i] != max(p)):	
	i = i + 1
	r = r + 0
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:27:25) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1

while (p[i] != max(p)):	
	i = i + 1
	r = r + 0
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:28:32) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (p[i] != max(p)):	
	i = i + 1
	r = r + 0
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:28:33) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (p[i] != max(p)):	
	i = i + 1
	r = r + 0
print(r)
-- EXECUTION TIME:
0.391184
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
1
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:29:43) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (f[i] != max(f)):	
	i = i + 1
	r = r + 0
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:30:35) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (f[i] != max(f)):	
	i = i + 1
	r = r + 1
print(r)
-- EXECUTION TIME:
0.473941
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:31:16) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (p[i] != max(p)):	
	i = i + 1
	r = r + 1
print(r)
-- EXECUTION TIME:
0.455918
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 12:31:19) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (p[i] != max(p)):	
	i = i + 1
	r = r + 1
print(r)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 12:32:08) 
-- CODE:
from numpy import*
p = array(eval(input("Presentes: "))) 
f = array(eval(input("Faltantes: ")))
i = 0
r = 1
while (p[i] != max(p)):	
	i = i + 1
	r = r + 1
print(r)
-- EXECUTION TIME:
0.605599
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
